--- a/TextDisplay_Top_summary.html
+++ b/TextDisplay_Top_summary.html
@@ -402,10 +402,10 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Tue Sep 20 14:49:24 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Oct 14 22:39:31 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri Oct 14 22:39:31 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Oct 14 22:39:31 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Oct 14 22:39:31 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/14/2016 - 22:44:25</center>
+<br><center><b>Date Generated:</b> 10/16/2016 - 20:27:50</center>
 </BODY></HTML>
