--- a/Top_summary.html
+++ b/Top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (11/03/2016 - 13:30:46)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (11/15/2016 - 15:19:25)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>VGA_w_Dispatch2.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/*.xmsgs?&DataKey=Warning'>17 Warnings (17 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/*.xmsgs?&DataKey=Warning'>34 Warnings (2 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -58,24 +58,24 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#FFFF99'>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD COLSPAN='2'><B>Utilization</B></TD></TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>187</TD>
+<TD ALIGN=RIGHT>305</TD>
 <TD ALIGN=RIGHT>18224</TD>
 <TD ALIGN=RIGHT COLSPAN='2'>1%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>687</TD>
+<TD ALIGN=RIGHT>906</TD>
 <TD ALIGN=RIGHT>9112</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>7%</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>9%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>158</TD>
-<TD ALIGN=RIGHT>716</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>22%</TD>
+<TD ALIGN=RIGHT>280</TD>
+<TD ALIGN=RIGHT>931</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>30%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded IOBs</TD>
-<TD ALIGN=RIGHT>27</TD>
+<TD ALIGN=RIGHT>19</TD>
 <TD ALIGN=RIGHT>232</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>11%</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>8%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Block RAM/FIFO</TD>
 <TD ALIGN=RIGHT>32</TD>
@@ -99,22 +99,22 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Nov 3 13:30:44 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/xst.xmsgs?&DataKey=Warning'>17 Warnings (17 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/xst.xmsgs?&DataKey=Info'>5 Infos (5 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.bld'>Translation Report</A></TD><TD>Out of Date</TD><TD>Thu Nov 3 13:07:20 2016</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/ngdbuild.xmsgs?&DataKey=Error'>4 Errors (4 new)</A></TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>2 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top_map.mrp'>Map Report</A></TD><TD>Out of Date</TD><TD>Thu Nov 3 11:55:33 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.par'>Place and Route Report</A></TD><TD>Out of Date</TD><TD>Thu Nov 3 11:55:33 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Tue Nov 15 15:19:24 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/xst.xmsgs?&DataKey=Warning'>34 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/xst.xmsgs?&DataKey=Info'>7 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.bld'>Translation Report</A></TD><TD>Out of Date</TD><TD>Thu Nov 3 15:23:31 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top_map.mrp'>Map Report</A></TD><TD>Out of Date</TD><TD>Thu Nov 3 15:24:04 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.par'>Place and Route Report</A></TD><TD>Out of Date</TD><TD>Thu Nov 3 15:24:16 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/par.xmsgs?&DataKey=Warning'>6 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>Thu Nov 3 11:55:33 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>Thu Nov 3 11:55:34 2016</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>Thu Nov 3 15:24:21 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>Thu Nov 3 15:24:32 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Nov 3 11:55:33 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Nov 3 11:55:34 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Nov 3 11:55:34 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Nov 3 15:24:32 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Nov 3 15:24:35 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 11/03/2016 - 13:30:46</center>
+<br><center><b>Date Generated:</b> 11/15/2016 - 15:19:25</center>
 </BODY></HTML>
