--- a/Top_summary.html
+++ b/Top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (11/17/2016 - 14:13:33)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>Top Project Status (11/17/2016 - 15:14:15)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>VGA_w_Dispatch2.xise</TD>
@@ -13,19 +13,20 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>Top</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Programming File Generated</TD>
+<TD>Bitgen Completed (Failed)</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc6slx16-3csg324</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>
-No Errors</TD>
+<font color="red"; face="Arial"><b>X </b></font>
+<A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/*.xmsgs?&DataKey=Error'>27 Errors (27 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/*.xmsgs?&DataKey=Warning'>32 Warnings (0 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/*.xmsgs?&DataKey=Warning'>85 Warnings (72 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -60,13 +61,13 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Slice Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>155</TD>
+<TD ALIGN=RIGHT>134</TD>
 <TD ALIGN=RIGHT>18,224</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>155</TD>
+<TD ALIGN=RIGHT>134</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -90,19 +91,19 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>472</TD>
+<TD ALIGN=RIGHT>449</TD>
 <TD ALIGN=RIGHT>9,112</TD>
-<TD ALIGN=RIGHT>5%</TD>
+<TD ALIGN=RIGHT>4%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>466</TD>
+<TD ALIGN=RIGHT>444</TD>
 <TD ALIGN=RIGHT>9,112</TD>
-<TD ALIGN=RIGHT>5%</TD>
+<TD ALIGN=RIGHT>4%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>324</TD>
+<TD ALIGN=RIGHT>307</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -114,7 +115,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>85</TD>
+<TD ALIGN=RIGHT>80</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -132,13 +133,13 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used exclusively as route-thrus</TD>
-<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>5</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice register load</TD>
-<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>0</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -156,9 +157,9 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>206</TD>
+<TD ALIGN=RIGHT>187</TD>
 <TD ALIGN=RIGHT>2,278</TD>
-<TD ALIGN=RIGHT>9%</TD>
+<TD ALIGN=RIGHT>8%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of MUXCYs used</TD>
@@ -168,50 +169,50 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>478</TD>
+<TD ALIGN=RIGHT>453</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>344</TD>
-<TD ALIGN=RIGHT>478</TD>
-<TD ALIGN=RIGHT>71%</TD>
+<TD ALIGN=RIGHT>337</TD>
+<TD ALIGN=RIGHT>453</TD>
+<TD ALIGN=RIGHT>74%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
-<TD ALIGN=RIGHT>6</TD>
-<TD ALIGN=RIGHT>478</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>453</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>128</TD>
-<TD ALIGN=RIGHT>478</TD>
-<TD ALIGN=RIGHT>26%</TD>
+<TD ALIGN=RIGHT>112</TD>
+<TD ALIGN=RIGHT>453</TD>
+<TD ALIGN=RIGHT>24%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
-<TD ALIGN=RIGHT>17</TD>
+<TD ALIGN=RIGHT>12</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of slice register sites lost<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to control set restrictions</TD>
-<TD ALIGN=RIGHT>61</TD>
+<TD ALIGN=RIGHT>42</TD>
 <TD ALIGN=RIGHT>18,224</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
-<TD ALIGN=RIGHT>33</TD>
+<TD ALIGN=RIGHT>38</TD>
 <TD ALIGN=RIGHT>232</TD>
-<TD ALIGN=RIGHT>14%</TD>
+<TD ALIGN=RIGHT>16%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of LOCed IOBs</TD>
-<TD ALIGN=RIGHT>33</TD>
-<TD ALIGN=RIGHT>33</TD>
+<TD ALIGN=RIGHT>38</TD>
+<TD ALIGN=RIGHT>38</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -354,7 +355,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>2.78</TD>
+<TD ALIGN=RIGHT>2.75</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -391,22 +392,22 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Nov 17 14:12:04 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/xst.xmsgs?&DataKey=Warning'>20 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/xst.xmsgs?&DataKey=Info'>2 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.bld'>Translation Report</A></TD><TD>Current</TD><TD>Thu Nov 17 14:12:12 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Thu Nov 17 14:12:54 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Thu Nov 17 14:13:09 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/par.xmsgs?&DataKey=Warning'>12 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:13:05 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/xst.xmsgs?&DataKey=Warning'>42 Warnings (38 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/xst.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.bld'>Translation Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:13:13 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:13:48 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/map.xmsgs?&DataKey=Warning'>13 Warnings (13 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (2 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:14:02 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/par.xmsgs?&DataKey=Warning'>30 Warnings (21 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Thu Nov 17 14:13:16 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Thu Nov 17 14:13:29 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:14:08 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\Top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Thu Nov 17 15:14:14 2016</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\_xmsgs/bitgen.xmsgs?&DataKey=Error'>27 Errors (27 new)</A></TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Nov 17 13:51:12 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Nov 17 14:13:30 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Nov 17 14:13:33 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Nov 17 14:36:10 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Nov 17 14:58:40 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Kara/Documents/GitHub/Assignment4_TextDisplay\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Nov 17 14:58:43 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 11/17/2016 - 14:16:37</center>
+<br><center><b>Date Generated:</b> 11/17/2016 - 15:14:15</center>
 </BODY></HTML>
